--- a/index.html
+++ b/index.html
@@ -16,11 +16,26 @@
 </head>
 <body>
 
-  Pricing
-  Product
-  About Us
-  Careers
-  Community
+  <!-- flex container -->
+  <nav>
+    <div>
+      <div>
+        <a href="#">Pricing</a>
+        <a href="#">Product</a> 
+        <a href="#">About Us</a>
+        <a href="#">Careers </a>
+        <a href="#">Community</a>
+      </div>
+    </div>
+  </nav>
+
+
+
+
+  
+ 
+  
+ 
 
   Get Started
 
