--- a/index.html
+++ b/index.html
@@ -16,17 +16,30 @@
 </head>
 <body>
 
-  <!-- flex container -->
-  <nav>
-    <div>
-      <div>
-        <a href="#">Pricing</a>
-        <a href="#">Product</a> 
-        <a href="#">About Us</a>
-        <a href="#">Careers </a>
-        <a href="#">Community</a>
-      </div>
-    </div>
+    <!-- Navbar -->
+    <nav class="relative container mx-auto p-6">
+      <!-- Flex container -->
+      <div class="flex items-center justify-between">
+        <!-- Logo -->
+        <div class="pt-2">
+          <img src="img/logo.svg" alt="" />
+        </div>
+        <!-- Menu Items -->  
+        <div>
+          <a href="#">Pricing</a>
+          <a href="#">Product</a> 
+          <a href="#">About Us</a>
+          <a href="#">Careers </a>
+          <a href="#">Community</a>
+        </div>
+        <!-- Button -->
+        <a
+          href="#"
+          class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block"
+          >Get Started</a
+        >
+
+
   </nav>
 
 
